[metadata]
name = aerobench
version = 2.0.0
author = Stanley Bak
author-email = stanley.bak@stonybrook.edu
home-page = https://github.com/stanleybak/AeroBenchVVPython
description = F16 simulation harness
long-description = file: README.md
license = GPLv3
platform = any

[options]
python_requires = >=3
packages = find:
package_dir =
    =code
install_requires =
    numpy
    scipy
    matplotlib

[options.packages.find]
where = code

[options.extras_require]
control = 
    slycot
    control
